--- a/Nithin2003/Views/Admin/AdminAndEditor.cshtml
+++ b/Nithin2003/Views/Admin/AdminAndEditor.cshtml
@@ -100,7 +100,7 @@
                 <div class="header-body">
                     <div class="row align-items-center py-4">
                         <div class="col-lg-6 col-7">
-                            <h6 class="h2 text-white d-inline-block mb-0">Admin and Editor</h6>
+                            <h6 class="h2 text-white d-inline-block mb-0">Admin and Editors</h6>
                             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                     <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
@@ -232,7 +232,7 @@
                                     <th>Age</th>
                                     <th> User Status</th>
                                     <th>City</th>
-                                        <th>Content Editor Status</th>
+                                        <th>Editor Status</th>
 
 
 
