--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<MyLoanRequest>
+﻿@model IEnumerable<MyLoanRequest>
 @{
     ViewData["Title"] = "TrackLoanRequest";
     Layout = "~/Views/Shared/_DashBoard.cshtml";
@@ -26,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
                     <ul class="navbar-nav">
-                        
+
 
                         @if (Context.Session.GetString("Admin") != "True")
                         {
@@ -97,88 +96,6 @@
                             </a>
                         </li>
 
-                        @*<li class="nav-item">
-                            <a class="nav-link ">
-                                <i class="ni ni-tv-2 text-primary"></i>
-                                <span class="nav-link-text">Dashboard</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-pin-3 text-primary"></i>
-                                <span class="nav-link-text">Google</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-single-02 text-yellow"></i>
-                                <span class="nav-link-text">Profile</span>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-bullet-list-67 text-default"></i>
-                                <span class="nav-link-text">Tables</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-key-25 text-info"></i>
-                                <span class="nav-link-text">Login</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-circle-08 text-pink"></i>
-                                <span class="nav-link-text">Register</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-send text-dark"></i>
-                                <span class="nav-link-text">Upgrade</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- Divider -->
-                    <hr class="my-3">
-                    <!-- Heading -->
-                    <h6 class="navbar-heading p-0 text-muted">
-                        <span class="docs-normal">Documentation</span>
-                    </h6>
-                    <!-- Navigation -->
-                    <ul class="navbar-nav mb-md-3">
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
-                                <i class="ni ni-spaceship"></i>
-                                <span class="nav-link-text">Getting started</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
-                                <i class="ni ni-palette"></i>
-                                <span class="nav-link-text">Foundation</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html" target="_blank">
-                                <i class="ni ni-ui-04"></i>
-                                <span class="nav-link-text">Components</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
-                                <i class="ni ni-chart-pie-35"></i>
-                                <span class="nav-link-text">Plugins</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active active-pro" href="examples/upgrade.html">
-                                <i class="ni ni-send text-dark"></i>
-                                <span class="nav-link-text">Upgrade to PRO</span>
-                            </a>
-                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -203,7 +120,7 @@
                                     <li class="breadcrumb-item active" aria-current="page">Table</li>
                                 </ol>
                             </nav>
-                        </div>                       
+                        </div>
                     </div>
                 </div>
             </div>
@@ -249,12 +166,7 @@
                                                     </div>
                                                 </div>
                                             </th>
-                                            @*<td class="budget">
-                                        @{
-                                        int age = DateTime.Now.Year - users.Age.Year;
-                                        }
-                                        @age years
-                                        </td>*@
+
                                             <td>
                                                 <span class="badge badge-dot mr-4">
                                                     <i class="bg-warning"></i>
@@ -263,113 +175,35 @@
                                             </td>
                                             <td>
                                                 <div class=" ni ni-money-coins">
-                                                    @*<div class="avatar-group">
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Ryan Tompson">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-1.jpg">
-                                                </a>
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Romina Hadid">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-2.jpg">
-                                                </a>
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Alexander Smith">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-3.jpg">
-                                                </a>
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Jessica Doe">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-4.jpg">
-                                                </a>
-                                                </div>*@
+
                                                     @users.LoanAmount
                                                 </div>
                                             </td>
                                             <td>
-                                        <span class="">@users.LastModified</span>
-                                        </td>
-                                        <td>
-                                        <span class="">@users.LoanRequestStatus</span>
-                                        </td>
-
-                                            @*<div class="dropdown">
-                                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                        </div>*@
+                                                <span class="">@users.LastModified</span>
+                                            </td>
+                                            <td>
+                                                <span class="">@users.LoanRequestStatus</span>
+                                            </td>
 
 
-                                            @*<td><div class="btn"> <a asp-controller="Dashboard" asp-action="ApproveLoan" asp-route-LoanId="@users.LoanId">Approve Loan</a></div></td>
-
-                                            <td><div class="btn"> <a asp-controller="Dashboard" asp-action="RejectLoan" asp-route-LoanId="@users.LoanId" style="color:red">Reject Loan</a></div></td>*@
                                         </tr>
 
                                     </tbody>
                                 }
                             </table>
                         </div>
-                        @*<!-- Card footer -->
-                        <div class="card-footer py-4">
-                        <nav aria-label="...">
-                        <ul class="pagination justify-content-end mb-0">
-                        <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">
-                        <i class="fas fa-angle-left"></i>
-                        <span class="sr-only">Previous</span>
-                        </a>
-                        </li>
-                        <li class="page-item active">
-                        <a class="page-link" href="#">1</a>
-                        </li>
-                        <li class="page-item">
-                        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                        <a class="page-link" href="#">
-                        <i class="fas fa-angle-right"></i>
-                        <span class="sr-only">Next</span>
-                        </a>
-                        </li>
-                        </ul>
-                        </nav>
-                        </div>*@
+                        
                     </div>
                 </div>
             </div>
 
             <!-- Footer -->
-            @*<footer class="footer pt-0">
-                <div class="row align-items-center justify-content-lg-between">
-                    <div class="col-lg-6">
-                        <div class="copyright text-center  text-lg-left  text-muted">
-                            &copy; 2020 <a href="" class="font-weight-bold ml-1" target="_blank">Nithin</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                            <li class="nav-item">
-                                <a href="" class="nav-link" target="_blank">Nithin</a>
-                                @*</li>
-                                <li class="nav-item">
-                                <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
-                                </li>
-                                <li class="nav-item">
-                                <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
-                                </li>
-                        </ul>
-                    </div>
-                </div>
-            </footer>*@
+           
             <footer class="footer pt-0">
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
-                        @*<div class="copyright text-center  text-lg-left  text-muted">
-                        &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
-                        </div>*@
+                        
                     </div>
                     <div class="col-lg-6">
                         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
