--- a/Nithin2003/Views/DashBoard/MyLoginDetails.cshtml
+++ b/Nithin2003/Views/DashBoard/MyLoginDetails.cshtml
@@ -67,6 +67,23 @@
                                     <span class="nav-link-text">My Transaction History</span>
                                 </a>
                             </li>
+                            @if (Context.Session.GetString("Manu") == "True")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link active" asp-controller="Ajax" asp-action="Index">
+                                        <i class="ni ni-circle-08"></i>
+                                        <span class="nav-link-text">Ajax</span>
+
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" asp-controller="WeatherForecast" asp-action="WeatherForecastIndex">
+                                        <i class="ni ni-circle-08"></i>
+                                        <span class="nav-link-text">Web API</span>
+
+                                    </a>
+                                </li>
+                            }
 
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
