--- a/Nithin2003/Views/WeatherForecast/WeatherForecastIndex.cshtml
+++ b/Nithin2003/Views/WeatherForecast/WeatherForecastIndex.cshtml
@@ -1,10 +1,14 @@
-﻿@model IEnumerable<MyTransferMoney>
+﻿
+
+@model IEnumerable<Nithin2003.Models.WeatherForecastModel>
 @{
-    ViewData["Title"] = "MytransactionHistory";
+    ViewData["Title"] = "WeatherForecastIndex";
     Layout = "~/Views/Shared/_DashBoard.cshtml";
 }
+
 <!DOCTYPE html>
 <html>
+
 
 <body>
     <!-- Sidenav -->
@@ -81,7 +85,6 @@
                                     </a>
                                 </li>
                             }
-
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
                                     <i class="ni ni-circle-08"></i>
@@ -90,7 +93,6 @@
                                 </a>
                             </li>
                         }
-
 
                         @if (Context.Session.GetString("ContentEditor") == "True")
                         {
@@ -108,7 +110,6 @@
                                 <span class="nav-link-text">Sign Out</span>
                             </a>
                         </li>
-
                     </ul>
 
 
@@ -126,7 +127,7 @@
                 <div class="header-body">
                     <div class="row align-items-center py-4">
                         <div class="col-lg-6 col-7">
-                            <h6 class="h2 text-white d-inline-block mb-0">Transactions</h6>
+                            <h6 class="h2 text-white d-inline-block mb-0">Web Forecast</h6>
                             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                     <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
@@ -135,10 +136,7 @@
                                 </ol>
                             </nav>
                         </div>
-                        @* <div class="col-lg-6 col-5 text-right">
-                            <a href="#" class="btn btn-sm btn-neutral">New</a>
-                            <a href="#" class="btn btn-sm btn-neutral">Filters</a>
-                        </div> *@
+
                     </div>
                 </div>
             </div>
@@ -150,18 +148,19 @@
                     <div class="card">
                         <!-- Card header -->
                         <div class="card-header border-0">
-                            <h3 class="mb-0">Users table</h3>
+                            <h3 class="mb-0"> table</h3>
                         </div>
                         <!-- Light table -->
                         <div class="table-responsive">
                             <table class="table align-items-center table-flush">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th>From User</th>
-                                        <th>To User</th>
-                                        <th>Amount Transfered</th>
-                                        <th> Transaction Date</th>
-                                        <th>IP Address</th>
+                                        <th>Date</th>
+                                        <th>Temperature (C)</th>
+                                        <th>Temperature (F)</th>
+                                        <th>Summary</th>
+
+
 
                                     </tr>
                                 </thead>
@@ -173,32 +172,30 @@
                                                 <div class="media align-items-center">
 
                                                     <div class="media-body">
-                                                        <span class="name mb-0 text-sm">@users.FromUsername</span>
+                                            
+                                                        <span class="name mb-0 text-sm">@users.Date</span>
                                                     </div>
                                                 </div>
                                             </th>
-
+                                           
                                             <td>
                                                 <span class="badge badge-dot mr-4">
                                                     <i class="bg-warning"></i>
-                                                    <span class="status">@users.ToUsername</span>
+                                                    <span class="status">@users.TemperatureC</span>
                                                 </span>
                                             </td>
-
                                             <td>
-                                                <div class=" ni ni-money-coins">
-                                                    <span class="">@users.Amount</span>
+
+                                                @users.TemperatureF
+                                            </td>
+                                            <td>
+                                                <div class="">
+                                                    <span class="">@users.Summary</span>
 
                                                 </div>
                                             </td>
-                                            <td>
-                                                <span class="">@users.TransactionDate</span>
-                                            </td>
-                                            <td>
-                                                <span class="">@users.IPAddress</span>
-                                            </td>
                                             
-
+                                        </tr>
 
                                     </tbody>
                                 }
@@ -213,9 +210,7 @@
             <footer class="footer pt-0">
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
-                        @*<div class="copyright text-center  text-lg-left  text-muted">
-                        &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
-                        </div>*@
+                        
                     </div>
                     <div class="col-lg-6">
                         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
@@ -242,5 +237,4 @@
 </body>
 
 </html>
-
 
