--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -20,8 +20,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
-                    <h1 data-aos="fade-up">I am Nithin </h1>
-                    <h2 data-aos="fade-up" data-aos-delay="400">This web application developed by me to demonstrate my coding skills</h2>
+                    <h1 data-aos="fade-up">I am Dhasari Nithin </h1>
+                    <h2 data-aos="fade-up" data-aos-delay="400">This web application showcases my technical expertise and coding skills.
+                        It demonstrates my ability to design, develop,
+                        and implement solutions using modern web technologies. The app highlights my proficiency in
+                        front-end and back-end development, offering a seamless user experience while utilizing best practices in coding and design</h2>
                     <div data-aos="fade-up" data-aos-delay="600">
                         <div class="text-center text-lg-start">
                             <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -49,7 +52,11 @@
                     <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
                         <div class="content">
                             <h3>Introduction</h3>
-                            <h2>I am Dhasari Nithin, I graduated in BCOM (C.A) from Government Degree College Armoor under Telangana University </h2>
+                            <h2>Passionate Full-Stack Web Developer with expertise in ASP.NET Core,
+                                MySQL, and front-end technologies. Proven ability to design and deploy dynamic,
+                                user-centric web applications, with a strong focus on problem-solving, mobile responsiveness,
+                                and delivering high-quality solutions.
+                                Eager to contribute skills in a collaborative environment and continue growing in software development </h2>
 
                             <div class="text-center text-lg-start">
                                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -168,6 +175,30 @@
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
                                     <h3>Experience in hosting Asp.net web application</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6" data-aos="zoom-out" data-aos-delay="800">
+                                <div class="feature-box d-flex align-items-center">
+                                    <i class="bi bi-check"></i>
+                                    <h3> Javascript</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6" data-aos="zoom-out" data-aos-delay="800">
+                                <div class="feature-box d-flex align-items-center">
+                                    <i class="bi bi-check"></i>
+                                    <h3> React</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6" data-aos="zoom-out" data-aos-delay="800">
+                                <div class="feature-box d-flex align-items-center">
+                                    <i class="bi bi-check"></i>
+                                    <h3> Angular</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6" data-aos="zoom-out" data-aos-delay="800">
+                                <div class="feature-box d-flex align-items-center">
+                                    <i class="bi bi-check"></i>
+                                    <h3> Git </h3>
                                 </div>
                             </div>
 
@@ -510,8 +541,8 @@
                             </a>
                             <p>This web application is developed to show my coding skills only and not for educational or other commercial purposes</p>
                             <div class="social-links mt-3">
-                                
-                                <a href="https://www.linkedin.com/search/results/people/?firstName=Nithin&lastName=dhasari&origin=FACETED_SEARCH&sid=B%3BD" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+
+                            <a href="https://www.linkedin.com/in/dhasari-nithin-30263b335/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
 
