--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -105,8 +105,8 @@
                             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                     <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                    <li class="breadcrumb-item"><a href="#">Table</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Table</li>
+                                    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                                    @* <li class="breadcrumb-item active" aria-current="page">Table</li> *@
                                 </ol>
                             </nav>
                         </div>
