--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -568,6 +568,10 @@
 
                                 Hyderabad<br>
                                 Telangana <br><br>
+                            <strong>Business</strong>Super Market<br>
+                            <strong></strong>Terms & Conditions<br>
+                            <strong></strong>Privacy policy<br>
+                            <strong></strong>Refund & cancellation policy<br>
                                 <strong>Phone:</strong>+91 77027 38161<br>
                                 <strong>Email:</strong>dhasarinithin7702@gmil.com<br>
                             </p>
